--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -14,7 +14,9 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col text-center">
-                <h2 class="special-h text-white">My Books</h2>
+                <hr>
+                <h2 class="special-h">My Books</h2>
+                <hr>
             </div>
         </div>
         <div class="row">
