--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -97,7 +97,7 @@
                                                     </div>
                                                 </div>
                                             </div>
-                                            <div class="col-12">
+                                            <div class="col-12 mb-5">
                                                 <a href="{% url 'products' %}" class="btn btn-outline-black rounded-0 mt-5">
                                                     <span class="icon">
                                                         <i class="fas fa-chevron-left"></i>
