testing html and making corrections to stray tags

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -24,7 +24,7 @@
             </div>
             <div class="row pb-2">
                 <div class="col-12 text-center pb-5">
-                    <img class="rounded img-fluid center-block hero-photo" src="{{ MEDIA_URL }}6_Pj0e347.png" alt="photo of new book" width="500" height="auto">
+                    <img class="rounded img-fluid center-block hero-photo" src="{{ MEDIA_URL }}6_Pj0e347.png" alt="photo of new book" width="500">
                 </div>
             </div>
     </section>
@@ -39,7 +39,6 @@
                     <a href="{% url 'products' %}" class="shop-now-button btn btn rounded-0 text-uppercase py-3">Shop Now</a>
                 </div>
             </div>    
-        </div>
     </section>
 
 <!-- Name section-->
