--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -106,11 +106,10 @@
 
 <script>
     function deleteProducts(productId){
-        console.log(productId);
         if (productId){
         flag=confirm("Are you sure you want to delete this item?");
             if (flag == true){
-                window.location.href = "delete/"+productId;
+                window.location.href = "{% url 'delete_product' product.id %}"
             }
         }
     }
