--- a/blog/templates/blog/blog.html
+++ b/blog/templates/blog/blog.html
@@ -38,7 +38,7 @@
         <div class="container">
             {% for post in posts %}
                 <!--Post-->
-                <div class="row text-center bg-white my-5">
+                <div class="row text-center form-row text-justify bg-white my-5">
                     <!--Post Info-->
                     <div class="col-12">
                         <h3>{{ post.title|title }}</h3>
