--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -101,7 +101,7 @@
                     </tr>   
                     <tr>
                         <td colspan="5" class="pt-5 pb-2 text-right">
-                            <h6><strong>Grand Total: €{{ bag_grand_total|floatformat:2 }}</strong></h6>
+                            <h6><strong>Grand Total: €{{ grand_total|floatformat:2 }}</strong></h6>
                             {% if free_delivery_delta > 0 %}
                             <p class="mb-1 text-info"><i class="fas fa-ghost"></i>
                                 Free delivery if you spend <strong>€{{ free_delivery_delta }}</strong> more!
