add link to new book release photo on index page

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -31,7 +31,9 @@
     <section>
             <div class="row pb-2">
                 <div class="col-lg-5 sm-12 bg-black">
-                    <img class="rounded img-fluid center-block author-photo" src="{{ MEDIA_URL }}christinegraen.jpg" alt="photo of the author" width="500" height="500">
+                    <a href="https://lisa1q84-kalopsyabooks.herokuapp.com/products/2/">
+                        <img class="rounded img-fluid center-block author-photo" src="{{ MEDIA_URL }}christinegraen.jpg" alt="photo of the author" width="500" height="500">
+                    </a>
                 </div>
                 <div class="col-lg-5 sm-12 bg-black">
                     <h4>About the Author</h4>
