correct link on index page and try to add links to carousel images

--- a/checkout/templates/checkout/checkout_success.html
+++ b/checkout/templates/checkout/checkout_success.html
@@ -203,8 +203,9 @@
                         <span class="icon mr-2">
                             <i class="fas fa-gifts"></i>
                         </span>
-                        <span class="text-uppercase">Have a look at our different photo shoots</span>
+                        <span class="text-uppercase">Have a look at other products</span>
                     </a>
+                    <hr>
                 {% endif %}
 			</div>
 		</div>
