add links to carousel slides

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -71,16 +71,24 @@
                             </a>
                         </div>
                         <div class="carousel-item">
-                            <img class="d-block w-100" src="{{ MEDIA_URL }}2.png" alt="2nd slide">
+                            <a href="https://lisa1q84-kalopsyabooks.herokuapp.com/products/7/">
+                                <img class="d-block w-100" src="{{ MEDIA_URL }}2.png" alt="2nd slide">
+                            </a>
                         </div>
                         <div class="carousel-item">
-                            <img class="d-block w-100" src="{{ MEDIA_URL }}3.png" alt="3rd slide">
+                            <a href="https://lisa1q84-kalopsyabooks.herokuapp.com/products/5/">
+                                <img class="d-block w-100" src="{{ MEDIA_URL }}3.png" alt="3rd slide">
+                            </a>
                         </div>
                         <div class="carousel-item">
-                            <img class="d-block w-100" src="{{ MEDIA_URL }}4.png" alt="3rd slide">
+                            <a href="https://lisa1q84-kalopsyabooks.herokuapp.com/products/1/">
+                                <img class="d-block w-100" src="{{ MEDIA_URL }}4.png" alt="3rd slide">
+                            </a>
                         </div>
                         <div class="carousel-item">
-                            <img class="d-block w-100" src="{{ MEDIA_URL }}5.png" alt="3rd slide">
+                            <a href="https://lisa1q84-kalopsyabooks.herokuapp.com/products/2/">
+                                <img class="d-block w-100" src="{{ MEDIA_URL }}5.png" alt="3rd slide">
+                            </a>
                         </div>
                     </div>
                     <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
