--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -33,7 +33,7 @@
                             <form class="form update-form text-center" method="POST" action="{% url 'add_to_wishlist' product.id %}">
                                 {% csrf_token %}
                                 <input type="hidden" name="redirect_url" value="{{ request.path }}">
-                                <button class="btn btn-black rounded-0 text-uppercase mt-5">Add to wishlist  <i class="far fa-heart"></i></button>
+                                <button class="btn btn-black rounded-0 text-uppercase mt-5 mb-1">Add to wishlist  <i class="far fa-heart"></i></button>
                             </form>
                     </div>
                     <div class="product-details col-12 col-md-6">
