--- a/templates/includes/toasts/toast_info.html
+++ b/templates/includes/toasts/toast_info.html
@@ -1,6 +1,7 @@
 <div class="toast" role="alert" aria-live="assertive" aria-atomic="true" data-autohide="false">
+    <div class="arrow-up arrow-info"></div>
+    <div class="w-100 toast-capper bg-info"></div>
     <div class="toast-header">
-      <img src="..." class="rounded mr-2" alt="...">
       <strong class="mr-auto">Info</strong>
       <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
         <span aria-hidden="true">&times;</span>
