adjusting footer to remove horizontal scrollbar on mobile

--- a/templates/base.html
+++ b/templates/base.html
@@ -140,30 +140,29 @@
     <footer class="footer">
       {% block footer %}
       {% endblock %}
-        <div class="row">
-          <div class="bg-dark col-md-4 mt-5 mt-md-0 col-sm-4 col-4">
-            <p class="m-2 text-white text-left"> © Christine Grän 2021</p>
-          </div>
-          <div class="bg-dark col-md-4 mt-5 mt-md-0 col-sm-4 col-4">
-            <div class="btt-button shadow-sm mt-2 rounded-0">
-              <a class="btt-link d-flex h-100">
-                <i class="fas fa-arrow-up text-white mx-auto my-auto"></i>
-              </a>
+        <div class="row bg-dark align-items-center p-2">
+            <div class="text-white col-4">
+              <p class="text-white m-0"> © Lisa Feigen 2021</p>
             </div>
-          </div>
-          <div class="bg-dark col-md-4 mt-5 col-sm-4 col-4 mt-md-0 "  style="background-color: blue;">
-            <p class="text-white">Follow me on Social Media</p>
-            <a class="facebook" href="" target="_blank" rel="noreferrer" aria-label="facebook"><i
-                class="fa fa-facebook"></i></a>
-            <a class="twitter" href="" target="_blank" rel="noreferrer" aria-label="twitter"><i
-                class="fa fa-twitter"></i></a>
-            <a class="instagram" href="" target="_blank" rel="noreferrer" aria-label="instagram"><i
-                class="fab fa-instagram"></i></a>
-            <a class="youtube" href="" rel="noreferrer" target="_blank" aria-label="youtube"><i
-                class="fab fa-youtube"></i></a>
-            <a class="spotify" href="" target="_blank" rel="noreferrer" aria-label="spotify"><i
-                class="fab fa-spotify"></i></a>
-          </div>
+            <div class="text-white col-4">
+              <div class="btt-button rounded-0">
+                <a class="btt-link d-flex h-100">
+                  <i class="fas fa-arrow-up text-white mx-auto my-auto"></i>
+                </a>
+              </div>
+            </div>
+            <div class="col-4 text-center">
+                <a class="facebook" href="https://www.facebook.com/" target="_blank" rel="noreferrer" aria-label="facebook"><i
+                    class="fab fa-facebook fa-sm"></i></a>
+                <a class="twitter" href="https://www.twitter.com/" target="_blank" rel="noreferrer" aria-label="twitter"><i
+                    class="fab fa-twitter fa-sm"></i></a>
+                <a class="instagram" href="https://www.instagram.com/" target="_blank" rel="noreferrer" aria-label="instagram"><i
+                    class="fab fa-instagram fa-sm"></i></a>
+                <a class="youtube" href="https://www.youtube.com/" rel="noreferrer" target="_blank" aria-label="youtube"><i
+                    class="fab fa-youtube fa-sm"></i></a>
+                <a class="spotify" href="https://www.spotify.com/" target="_blank" rel="noreferrer" aria-label="spotify"><i
+                    class="fab fa-spotify fa-sm"></i></a>
+            </div>
         </div>
     </footer>
 
