--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -41,12 +41,12 @@
                     {% for item in bag_items %}
                     <tr>
                         <th></th>
-                        <td class="p-3 w-25"><img class="img-fluid rounded" src="{{ item.product.image.url }}"></td>
-                        <td class="p-3 w-30">
+                        <td class="p-lg-3 w-25"><img class="img-fluid rounded" src="{{ item.product.image.url }}"></td>
+                        <td class="p-lg-3 w-25">
                             <p class="my-0"><strong>{{ item.product.name }}</strong></p>
                             <p class="my-0">€{{ item.product.price }}</p>
                         </td>
-                        <td class="p-3 w-25">
+                        <td class="p-lg-3 w-25">
                             <form class="form update-form" action="{% url 'update_bag' item.item_id %}" method="POST">
                                 {% csrf_token %}
                                 <div class="form-group">
