remove margin from footer to eliminate horizontal scroll bar

--- a/templates/base.html
+++ b/templates/base.html
@@ -140,7 +140,7 @@
     <footer class="footer">
       {% block footer %}
       {% endblock %}
-        <div class="row bg-dark align-items-center p-2">
+        <div class="row bg-dark align-items-center p-2 m-0">
             <div class="text-white col-4">
               <p class="text-white m-0"> © Lisa Feigen 2021</p>
             </div>
@@ -151,16 +151,16 @@
                 </a>
               </div>
             </div>
-            <div class="col-4 text-center">
-                <a class="facebook" href="https://www.facebook.com/" target="_blank" rel="noreferrer" aria-label="facebook"><i
+            <div class="col-4 text-center p-0">
+                <a class="facebook text-white p-0.5" href="https://www.facebook.com/" target="_blank" rel="noreferrer" aria-label="facebook"><i
                     class="fab fa-facebook fa-sm"></i></a>
-                <a class="twitter" href="https://www.twitter.com/" target="_blank" rel="noreferrer" aria-label="twitter"><i
+                <a class="twitter text-white p-0.5" href="https://www.twitter.com/" target="_blank" rel="noreferrer" aria-label="twitter"><i
                     class="fab fa-twitter fa-sm"></i></a>
-                <a class="instagram" href="https://www.instagram.com/" target="_blank" rel="noreferrer" aria-label="instagram"><i
+                <a class="instagram text-white p-0.5" href="https://www.instagram.com/" target="_blank" rel="noreferrer" aria-label="instagram"><i
                     class="fab fa-instagram fa-sm"></i></a>
-                <a class="youtube" href="https://www.youtube.com/" rel="noreferrer" target="_blank" aria-label="youtube"><i
+                <a class="youtube text-white p-0.5" href="https://www.youtube.com/" rel="noreferrer" target="_blank" aria-label="youtube"><i
                     class="fab fa-youtube fa-sm"></i></a>
-                <a class="spotify" href="https://www.spotify.com/" target="_blank" rel="noreferrer" aria-label="spotify"><i
+                <a class="spotify text-white p-0.5" href="https://www.spotify.com/" target="_blank" rel="noreferrer" aria-label="spotify"><i
                     class="fab fa-spotify fa-sm"></i></a>
             </div>
         </div>
