--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -41,12 +41,12 @@
                     {% for item in bag_items %}
                     <tr>
                         <th></th>
-                        <td class="p-lg-3 w-25"><img class="img-fluid rounded" src="{{ item.product.image.url }}"></td>
-                        <td class="p-lg-3 w-25">
+                        <td class="p-ml-3 w-25"><img class="img-fluid rounded" src="{{ item.product.image.url }}"></td>
+                        <td class="p-ml-3 w-25">
                             <p class="my-0"><strong>{{ item.product.name }}</strong></p>
                             <p class="my-0">€{{ item.product.price }}</p>
                         </td>
-                        <td class="p-lg-3 w-25">
+                        <td class="p-ml-3 w-25">
                             <form class="form update-form" action="{% url 'update_bag' item.item_id %}" method="POST">
                                 {% csrf_token %}
                                 <div class="form-group">
@@ -80,7 +80,7 @@
                             <a class="update-link text-info"><small>Update</small></a>
                             <a class="remove-item text-danger float-right" id="remove_{{ item.item_id }}" data-variation="{{ item.variation }}"><small>Remove</small></a>
                         </td> 
-                        <td> <p class="my-0">€{{ item.product.price | calc_subtotal:item.quantity }}</p></td>
+                        <td class="p-ml-3 w-25"> <p class="my-0">€{{ item.product.price | calc_subtotal:item.quantity }}</p></td>
                     </tr> 
                 
                     {% endfor %}
