--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -77,10 +77,10 @@
                                     </div>
                                 </div>
                             </form>
-                            <a class="update-link text-info"><small>Update</small></a>
-                            <a class="remove-item text-danger float-right" id="remove_{{ item.item_id }}" data-variation="{{ item.variation }}"><small>Remove</small></a>
+                            <a class="update-link text-info p-1"><small>Update</small></a>
+                            <a class="remove-item text-danger p-1" id="remove_{{ item.item_id }}" data-variation="{{ item.variation }}"><small>Remove</small></a>
                         </td> 
-                        <td class="p-ml-3 w-25"> <p class="my-0">€{{ item.product.price | calc_subtotal:item.quantity }}</p></td>
+                        <td class="p-ml-3 w-25"> <p class="text-center">€{{ item.product.price | calc_subtotal:item.quantity }}</p></td>
                     </tr> 
                 
                     {% endfor %}
