--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -31,10 +31,10 @@
                     <thead>
                       <tr>
                         <th></th>
-                        <th scope="col">Image</th>
-                        <th scope="col">Product Info</th>
-                        <th scope="col">Quantity</th>
-                        <th scope="col">Total</th>
+                        <th scope="col" class="text-center">Image</th>
+                        <th scope="col" class="text-center">Product Info</th>
+                        <th scope="col" class="text-center">Quantity</th>
+                        <th scope="col" class="text-center">Total</th>
                       </tr>
                     </thead>
                     <div>
