remove script type as it brought up a warning in the validator

--- a/templates/base.html
+++ b/templates/base.html
@@ -167,12 +167,12 @@
     </footer>
 
     {% block postloadjs %}
-      <script type="text/javascript">
+      <script>
         $('.btt-link').click(function(e) {
           window.scrollTo(0,0)
         })
       </script>
-      <script type="text/javascript">
+      <script>
         $('.toast').toast('show');
       </script>
     {% endblock %}
