--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -63,6 +63,7 @@
     <section class="py-5 bg-white">
         <div class="row justify-content-center pb-5 content">
             <div class="col-md-6">
+                <h2>Explore</h2>
                 <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
